# phidget_docker

./: LICENSE  README.md
mdns/: Dockerfile  app.py  current.py  default.profraw  temp.py
mdns/Phidget22Python/: setup.py
mdns/Phidget22Python/Phidget22/: ChannelClass.py  DeviceClass.py  DeviceID.py  Phidget.py  __init__.py
mdns/Phidget22Python/Phidget22/Devices/: Accelerometer.py  BLDCMotor.py  CapacitiveTouch.py  DCMotor.py  DistanceSensor.py  Encoder.py  FrequencyCounter.py  Gyroscope.py  Hub.py  Magnetometer.py  MotorPositionController.py  RCServo.py  Spatial.py  Stepper.py  VoltageRatioInput.py
mdns/libphidget22extra/: ChangeLog  Makefile.am  Makefile.in  README  configure  configure.ac  libphidget22extra.pc.in
mdns/libphidget22extra/src/: pconf-unix.c  pconf-unix.h  pconf.c  pconf.flex.c  phidget22extra.h  phidgetdicthelpers.c  phidgethelpers.c  phidgetmatch.c  projectsupport.c
mdns/libphidget22extra/src/phidget22extra/: phidget22extra_int.h  phidgetconfig.h  phidgetdicthelpers.h  phidgethelpers.h  phidgetloghelpers.h  phidgetmatch.h  projectsupport.h
mdns/libphidget22extra/src/plat/unix/: daemon.c  modules.c
mdns/libphidgets22/: configure  library_version
mdns/libphidgets22/src/: bridgepackets.gen.c  bridgepackets.gen.h  datainterval.gen.c  devices.gen.c  devices.gen.h  enumutil.gen.c  gpp.c  phidget.c  phidget.h  structio.gen.c  structio.gen.h  supportedpacket.gen.c  types.gen.h  vint.c  vintpackets.c  vintpackets.gen.c
mdns/libphidgets22/src/class/: accelerometer.c  accelerometer.gen.c  accelerometer.gen.h  bldcmotor.gen.c  bldcmotor.gen.h  capacitivetouch.gen.c  capacitivetouch.gen.h  currentinput.gen.c  currentinput.gen.h  currentoutput.gen.c  currentoutput.gen.h  dataadapter.c  dataadapter.gen.c  dataadapter.gen.h  dcmotor.gen.c  dcmotor.gen.h  dictionary.gen.c  dictionary.gen.h  digitalinput.gen.c  digitalinput.gen.h  digitaloutput.gen.c  digitaloutput.gen.h  distancesensor.gen.c  distancesensor.gen.h  encoder.gen.c  encoder.gen.h  firmwareupgrade.gen.c  firmwareupgrade.gen.h  frequencycounter.gen.c  frequencycounter.gen.h  generic.gen.c  generic.gen.h  gps.gen.c  gps.gen.h  gyroscope.c  gyroscope.gen.c  gyroscope.gen.h  hub.gen.c  hub.gen.h  humiditysensor.gen.c  (+43 more)
mdns/libphidgets22/src/device/: bridgedevice.c  dataadapterdevice.c  genericdevice.c  hubdevice.c  interfacekitdevice.c  spatialdevice.c
mdns/libphidgets22/src/network/: network.h
mdns/libphidgets22/src/plat/labview/: phidget_labview.gen.c  phidget_labview.gen.h
mdns/libphidgets22/src/plat/linux/: symversion.def  usblinux.c
mdns/libphidgets22/src/util/: dataadaptersupport.c
mdns/phidget22admin/: AUTHORS  Makefile.am  Makefile.in  README  configure  configure.ac  fwupgrade.c  fwupgrade.h  main.c  phidgetadmin.h
mdns/phidget22admin/firmware/: 1018_3v1000.bin.rc4  1024_0v100.bin.rc4  1024_0v101.bin.rc4  1024_0v103.bin.rc4  1032_0v200.bin.rc4  1032_0v201.bin.rc4  1041_0v200.bin.rc4  1041_0v201.bin.rc4  1041_0v202.bin.rc4  1041_0v203.bin.rc4  1042_0v300.bin.rc4  1042_0v301.bin.rc4  1042_0v302.bin.rc4  1042_0v303.bin.rc4  1043_0v300.bin.rc4  1043_0v301.bin.rc4  1043_1v302.bin.rc4  1044_0v400.bin.rc4  1044_0v401.bin.rc4  1044_0v402.bin.rc4  1044_0v403.bin.rc4  1044_1v500.bin.rc4  1044_1v502.bin.rc4  1044_1v511.bin.rc4  1047_2v200.bin.rc4  1048_1v200.bin.rc4  1048_1v204.bin.rc4  1048_2v210.bin.rc4  1048_2v212.bin.rc4  1057_3v400.bin.rc4  1067_0v200.bin.rc4  1067_0v201.bin.rc4  1067_0v202.bin.rc4  1067_0v203.bin.rc4  1067_0v204.bin.rc4  1067_0v205.bin.rc4  1067_0v206.bin.rc4  ADP1000_0x01D_v104.bin.obf  ADP1000_0x01D_v105.bin.obf  DAQ1000_0x032_v102.bin.obf  (+185 more)
